<resources>
    <string name="app_name">Group Project</string>
    <string name="open_weather_maps_app_id">f4cc1cbac1f6c83ee4d378b319a3bd26</string>

    <!-- User Preference -->
    <string name="user_preference_title">User Preference</string>
    <string name="title_user_name_preference">User</string>
    <string name="title_zip_code_preference">Zip Code</string>
    <string name="title_relationship_preference">In relationship</string>
    <string name="summary_user_name_preference">Please enter your name</string>
    <string name="summary_zip_code_preference">Please enter you zip code</string>
    <string name="summary_relationship_preference">Are you in a relationship?</string>

    <!-- Valentine -->
    <string name="valentine">Valentine</string>
    <string name="relationship_christmas">Christmas</string>
    <string name="relationship_birthday">Birthday</string>
    <string name="relationship_anniversary">Anniversary</string>
    <string name="relationship_valentine">Valentine\'s Day</string>
    <string name="relationship_father_birthday">Dad\'s B-Day</string>
    <string name="relationship_mother_birthday">Mom\'s B-Day</string>


    <!-- Weather Reminder -->
    <string name="weatherReminder">Weather Reminder</string>

    <!-- Main Screen -->
    <string name="weather">WEATHER</string>
    <string name="relationship">RELATIONSHIP</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="user_setting">USER SETTING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Custom Events Strings-->
    <string name="add_event">Add Event</string>
    <string name="custom_events">Your Custom Events:</string>

    <!--Event Adder Strings-->
    <string name="add_an_event">Add an Event:</string>
    <string name="event_name">Event Name:</string>
    <string name="event_description">Event description:</string>
    <string name="event_date">Select Event Date:</string>
    <string name="event_time">Select Event Time:</string>
    <string name="initial_reminder_date">Initial Reminder Date:</string>
    <string name="initial_reminder_time">Initial Reminder Time:</string>
    <string name="later_reminders">Remind me:</string>

    <string-array name="reminder_alarm">
        <item>Just once</item>
        <item>Every hour</item>
        <item>Every 3 hours</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
        <item>Every 24 hours</item>
    </string-array>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="event_name_reminder">You forgot to name your event!</string>
    <string name="event_description_reminder">Please write a short description of your event!</string>
    <string name="date_reminder">You forgot to select a date for your event!</string>
    <string name="time_reminder">You forgot to select a time for your event!</string>
    <string name="initial_date_reminder">Please select the initial date you\'d like to be reminded about your event!</string>
    <string name="initial_time_reminder">Please select the initial time you\'d like to be reminded about your event!</string>
    <string name="reminder_date_error">Your initial reminder is scheduled on or after the event has occurred! Please shcedule an earlier reminder.</string>
    <string name="ok">OK</string>

    <!--Single Custom Event-->
    <string name="single_event_name">Event Name:</string>
    <string name="single_event_date">Event Date:</string>
    <color name="light_red">#fcefef</color>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Onboarding Welcome -->
    <string name="onboard_welcome_title">Welcome to Tick!</string>
    <string name="onboard_welcome_subtitle">In order to get you started, we need a little bit of information from you.</string>
    <string name="onboard_finish">Finish</string>

    <!-- Onboarding Personal -->
    <string name="onboard_personal_title">Personal</string>
    <string name="onboard_personal_subtitle">Just a little bit to make Tick more personal.</string>
    <string name="onboard_personal_name_label">Name</string>
    <string name="onboard_personal_name_hint">Jane Doe</string>
    <string name="onboard_personal_zip_label">Zipcode</string>
    <string name="onboard_personal_zip_hint">12345</string>

    <!-- Onboarding Relationship -->
    <string name="onboard_relationship_title">Relationships</string>
    <string name="onboard_relationship_subtitle">For events related to those close to you.</string>
    <string name="onboard_relationship_prompt">Enable relationship reminders</string>

    <!-- Onboarding Weather -->
    <string name="onboard_weather_title">Weather</string>
    <string name="onboard_weather_subtitle">So you never get caught off-guard by nature.</string>
    <string name="onboard_weather_prompt">Which weather conditions would you like to receive notifications for?</string>
    <string name="onboard_weather_rain_label">Rain</string>
    <string name="onboard_weather_snow_label">Snow</string>
    <string name="onboard_weather_wind_label">Wind</string>
    <string name="onboard_weather_temperature_label">Temperature</string>

    <!-- Onboarding Summary -->
    <string name="onboard_summary_title">Review</string>
    <string name="onboard_summary_subtitle">This is the information you provided us. If everything looks good, you\'re good to go!</string>
    <string name="onboard_summary_note">If you ever want to change any of this information, you can do so in the User Settings section.</string>
    <string name="onboard_summary_info_label">Your Information</string>
    <string name="onboard_summary_relationship_enabled">Relationship reminders enabled</string>
    <string name="onboard_summary_rain_enabled">Rain reminders enabled</string>
    <string name="onboard_summary_snow_enabled">Snow reminders enabled</string>
    <string name="onboard_summary_wind_enabled">Wind reminders enabled</string>
    <string name="onboard_summary_temperature_enabled">Temperature reminders enabled</string>
    <string name="onboard_summary_relationship_disabled">Relationship reminders disabled</string>
    <string name="onboard_summary_rain_disabled">Rain reminders disabled</string>
    <string name="onboard_summary_snow_disabled">Snow reminders disabled</string>
    <string name="onboard_summary_wind_disabled">Wind reminders disabled</string>
    <string name="onboard_summary_temperature_disabled">Temperature reminders disabled</string>

</resources>
