<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_event"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"/>

    <EditText
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:paddingTop="10dp"/>

        <ImageView
            android:id="@+id/event_date_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:textSize="18sp"
            android:layout_marginStart="4dp"/>

        <ImageView
            android:id="@+id/event_time_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clock"
            android:layout_alignParentEnd="true"
            android:paddingRight="11dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/initial_reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/initial_reminder_date"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:paddingTop="10dp"/>

        <ImageView
            android:id="@+id/initial_reminder_date_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/initial_reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/initial_reminder_time"
            android:textSize="18sp"
            android:layout_marginStart="4dp"/>

        <ImageView
            android:id="@+id/initial_reminder_time_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clock"
            android:layout_alignParentEnd="true"
            android:paddingRight="11dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/later_reminders"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_weight="12"/>

        <Spinner
            android:id="@+id/reminder_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/reminder_alarm"
            android:layout_weight="1">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
