<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_orange">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_events"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_event_name"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_event_date"
            android:layout_weight="1.75"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/calender_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/view_border"
        >
    </ListView>

    <Button
        android:id="@+id/add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:drawableEnd="@drawable/add_event"
        android:drawablePadding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>
