<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subtitle"
        android:layout_marginBottom="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/onboard_personal_title"
        android:textColor="@color/white_primary"
        android:textSize="30sp" />

    <TextView
        android:id="@id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout"
        android:layout_marginBottom="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/onboard_personal_subtitle"
        android:textColor="@color/white_primary"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/onboard_personal_name_label"
                android:textColor="@color/white_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@drawable/cursor_white"
                android:textColor="@color/white_primary"
                android:hint="@string/onboard_personal_name_hint"
                android:textColorHint="@color/white_hint"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/onboard_personal_zip_label"
                android:textColor="@color/white_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number"
                android:textCursorDrawable="@drawable/cursor_white"
                android:textColor="@color/white_primary"
                android:hint="@string/onboard_personal_zip_hint"
                android:textColorHint="@color/white_hint"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>