<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subtitle"
        android:layout_marginBottom="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/onboard_relationship_title"
        android:textColor="@color/white_primary"
        android:textSize="30sp" />

    <TextView
        android:id="@id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_layout"
        android:layout_marginBottom="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/onboard_relationship_subtitle"
        android:textColor="@color/white_primary"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/onboard_relationship_prompt"
            android:textColor="@color/white_primary"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Onboarding.Relationship.Switch" />

    </LinearLayout>

</RelativeLayout>

